<?xml version="1.0"?>
<package>
  <name>daly_bms_msgs</name>
  <version>2.4.0</version>
  <description>The daly_bms_msgs package. Common messages and services used by daly_bms package.</description>

  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>

  <license>BSD</license>

  <author email="aarnal@robotnik.es">Alejandro Arnal</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
